card issue overflow solved

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -41,6 +41,9 @@ button,
     .owl-stage{
         display: flex;
     }
+    .owl-stage-outer{
+        overflow: inherit !important;
+    }
     .owl-drag{
         .owl-item{
             display: flex;
